--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
       "git add"
     ]
   },
-  "private": true,
+  "private": false,
   "dependencies": {
     "@angular/animations": "^5.2.11",
     "@angular/cdk": "^5.2.5",
