--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ngx-drag-to-select",
-  "version": "1.1.2",
+  "name": "olb-drag-to-select",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
