--- a/src/lib/package.json
+++ b/src/lib/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../node_modules/ng-packagr/package.schema.json",
   "name": "olb-drag-to-select",
-  "version": "1.0.1-1",
+  "version": "1.0.2",
   "description": "A lightweight, fast, configurable and reactive drag-to-select component for Angular 5 and beyond",
   "sideEffects": false,
   "peerDependencies": {
