--- a/projects/ngx-drag-to-select/package.json
+++ b/projects/ngx-drag-to-select/package.json
@@ -1,11 +1,11 @@
 {
   "name": "olb-drag-to-select",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "description": "A lightweight, fast, configurable and reactive drag-to-select component for Angular 6 and beyond",
   "sideEffects": false,
   "peerDependencies": {
-    "@angular/core": ">=6.0.0 || >=7.0.0",
-    "@angular/common": ">=6.0.0 || >=7.0.0",
+    "@angular/core": ">=6.0.0",
+    "@angular/common": ">=6.0.0",
     "rxjs": ">=6.1.0"
   },
   "repository": {
