--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "cypress": "^3.1.0",
     "del-cli": "^1.1.0",
     "express": "^4.16.4",
+    "har-validator": "^5.1.3",
     "husky": "^1.0.0-rc.15",
     "jest": "^23.6.0",
     "jest-preset-angular": "^6.0.1",
