--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "cpr": "^3.0.1",
     "cypress": "^3.1.0",
     "del-cli": "^1.1.0",
+    "event-stream": "^4.0.1",
     "express": "^4.16.4",
     "har-validator": "^5.1.3",
     "husky": "^1.0.0-rc.15",
